[package]
name = "ezcron"
version = "0.8.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
gethostname = "0.4.3"
getopts = "0.2.21"
libc = "0.2.150"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
subprocess = "0.2.9"
toml = "0.8.8"
uuid = { version = "1.6.1", features = ["serde", "v4", "fast-rng", "macro-diagnostics" ] }
